<resources>
    <string name="app_name">Rental Boardgames</string>


    <string name="search">Pesquisar</string>
    <string name="avalible">Disponível</string>
    <string name="avalibles">Disponíveis</string>
    <string name="unique_avalibles">Único Disponível</string>
    <string name="unavalible">Indisponível</string>
    <string name="recommended_age">Idade Recomendada:</string>
    <string name="playing_time">Tempo Médio de Jogo:</string>
    <string name="players">Jogadores:</string>
    <string name="minutes">minutos</string>
    <string name="amount_avalible">Total Disponível para Alugar:</string>
    <string name="rent">Alugar</string>
    <string name="confirm">Confirmar</string>
    <string name="boardgame">Boardgame:</string>
    <string name="rent_price">Valor do Aluguel:</string>
    <string name="rent_total_price">Valor Total do Aluguel:</string>
    <string name="delivery">Forma de Entrega:</string>
    <string name="delivery_prompt">Escolha uma opção</string>
    <string name="address">Endereço</string>
    <string-array name="deliveries_type">
        <item>Balcão</item>
        <item>Motoboy</item>
    </string-array>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="title_activity_list_boardgames">ListBoardgames</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Pesquisar</string>
    <string name="signout">Sair</string>
    <string name="lends">Empréstimos</string>
    <string name="my_account">Minha Conta</string>
    <string name="settings">Configurações</string>
    <string name="order_by_name_az">Ordernar por Nome</string>
    <string name="order_by_price_asc">Ordernar por Preço Crescente</string>
    <string name="order_by_price_desc">Ordernar por Preço Decrescente</string>
    <string name="order_title">Ordernar</string>
    <string-array name="order_array">
        <item>Nome de A a Z</item>
        <item>Nome de Z a A</item>
        <item>Preço Crescente</item>
        <item>Preço Decrescente</item>
    </string-array>
    <string name="title_activity_lends">LendsActivity</string>
    <string name="tab_text_1">Meus Empréstimos</string>
    <string name="tab_text_2">Histórico</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="settings_notification">Desejo receber notificações sobre o vencimento dos emprétimos</string>
    <string name="settings_frequency">Avisar quando faltar:</string>
    <string-array name="settings_when_notify">
        <item>2 dias</item>
        <item>1 dia</item>
        <item>No último dia</item>
    </string-array>
    <string name="title_activity_login">Entrar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- DEFINITIVO -->

    <string name="prefix_app_name">Rental</string>
    <string name="sufix_app_name">Boardgames</string>

    <string name="email">E-mail</string>
    <string name="signin_google">Entrar com a Conta Google</string>
    <string name="password">Senha</string>
    <string name="signin">Entrar</string>
    <string name="signup">Cadastrar</string>
    <string name="password_confirmation">Confirmar Senha</string>
    <string name="cancel">Cancelar</string>
    <string name="name">Nome</string>
    <string name="cellphone">Celular</string>


</resources>
