<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/gTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        />

    <android.support.constraint.Guideline
        android:id="@+id/gFieldsLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <android.support.constraint.Guideline
        android:id="@+id/gButtonsLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/gTitle"
        />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/gFieldsLogin" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@id/gFieldsLogin" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintBottom_toTopOf="@id/gButtonsLogin"
        android:onClick="btnSignInOnClick"
        />

    <Button
        android:id="@+id/btnSignInGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_google"
        app:layout_constraintTop_toTopOf="@id/gButtonsLogin"
        android:onClick="btnSignInGoogleOnClick"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@id/btnSignInGoogle"
        android:onClick="btnSignUpOnClick"
        />


</android.support.constraint.ConstraintLayout>