<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    tools:context=".controller.CheckoutRentActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boardgame"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/lblBoardgameCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_price"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblRentPriceCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/deliveryCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        />


    <TextView
        android:id="@+id/lblAddressCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/txtAddressCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_total_price"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblTotalRentPriceCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="end"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnConfirmCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:onClick="btnConfirmCheckoutRent"
            />

        <Button
            android:id="@+id/btnCancelCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="btnCancelCheckoutRent"
            />

    </LinearLayout>



</LinearLayout>